--- a/DTC.web/src/pages/Profile/Profile.css
+++ b/DTC.web/src/pages/Profile/Profile.css
@@ -21,6 +21,7 @@
     width: 125px;
     height: 40px;
     background-color: rgb(27, 0, 78);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .oauth button:hover {
@@ -29,4 +30,18 @@
 
 .oauth button:active {
     background-color: rgb(113, 77, 185);
+}
+
+#user-info {
+    margin-top: 10px;
+    padding: 15px;
+    gap: 10px;
+    font-family: "Arial";
+    display: flex;
+    flex-direction: column;
+    background-color: yellow;
+    border-radius: 25px;
+    background-color: rgb(61, 28, 126);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    color: rgb(245, 245, 245);
 }
