--- a/DTC.web/src/pages/Profile/Profile.css
+++ b/DTC.web/src/pages/Profile/Profile.css
@@ -11,6 +11,12 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
+#header-pf:hover + .user-popup {
+    color: rgb(219, 179, 223);
+    background-color: rgb(48, 22, 99);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
 .oauth {
     margin-top: 130px;
     margin-left: 10px;
