--- a/DTC.web/src/pages/Pages.css
+++ b/DTC.web/src/pages/Pages.css
@@ -1,162 +1,177 @@
 body {
-    background-color: rgb(255, 251, 234);
-    margin: 0;
-    padding: 0;
+  background-color: rgb(255, 251, 234);
+  margin: 0;
+  padding: 0;
 }
 
 text {
-    color: rgb(245, 245, 245);
+  color: rgb(245, 245, 245);
 }
 
 .heading {
-    font-weight: bold;
-    font-size: 30px;
-    padding: 15px;
-    background-color: rgb(59, 27, 121);
-    border-radius: 25px;
-    text-wrap: nowrap;
-    position: static;
-    margin-left: 8px;
-    user-select: none;
-    letter-spacing: 1px;
+  font-weight: bold;
+  font-size: 30px;
+  padding: 15px;
+  background-color: rgb(59, 27, 121);
+  border-radius: 25px;
+  text-wrap: nowrap;
+  position: static;
+  margin-left: 8px;
+  user-select: none;
+  letter-spacing: 1px;
 }
 
 .search-panel {
-    position: static;
-    height: 100px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-left: 15px;
+  position: static;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 15px;
 }
 
 .num-results {
-    color: rgb(29, 14, 41);
-    font-size: 15px;
-    text-wrap: nowrap;
-    position: fixed;
-    text-align: left;
-    left: 10px;
-    top: 128px;
+  color: rgb(29, 14, 41);
+  font-size: 15px;
+  text-wrap: nowrap;
+  position: fixed;
+  text-align: left;
+  left: 10px;
+  top: 128px;
 }
 
 input {
-    color: white;
-    font-size: 18px;
-    background-color: rgb(59, 27, 121);
-    border-radius: 50px;
-    border: none;
-    outline: none;
-    width: 400px;
-    height: 35px;
-    text-indent: 12px;
-    padding-right: 58px;
+  color: white;
+  font-size: 18px;
+  background-color: rgb(59, 27, 121);
+  border-radius: 50px;
+  border: none;
+  outline: none;
+  width: 400px;
+  height: 35px;
+  text-indent: 12px;
+  padding-right: 58px;
 }
 
 button {
-    font-size: 18px;
-    border-radius: 20px;
-    border: none;
-    width: 40px;
-    height: 35px;
-    margin-right: 5px;
-    margin-left: 5px;
-    background-color: transparent;
-    color: rgb(245, 245, 245);
-    text-align: center;
-    cursor: pointer;
-    outline: none;
+  font-size: 18px;
+  border-radius: 20px;
+  border: none;
+  width: 40px;
+  height: 35px;
+  margin-right: 5px;
+  margin-left: 5px;
+  background-color: transparent;
+  color: rgb(245, 245, 245);
+  text-align: center;
+  cursor: pointer;
+  outline: none;
 }
 
 button:hover {
-    background-color: rgb(78, 48, 139);
+  background-color: rgb(78, 48, 139);
 }
 
 button:active {
-    background-color: rgb(113, 77, 185);
+  background-color: rgb(113, 77, 185);
 }
 
 .button-clear {
-    position: relative;
-    right: 42px;
+  position: relative;
+  right: 42px;
 }
 
 .profile-panel {
-    flex-direction: column;
-    position: fixed;
-    right: 20px;
+  flex-direction: column;
+  position: fixed;
+  right: 20px;
 }
 
 .profile-button {
-    font-size: 25px;
-    height: 45px;
-    width: 48px;
-    border-radius: 30px;
+  font-size: 25px;
+  height: 45px;
+  width: 48px;
+  border-radius: 30px;
 }
 
 .create-deck-button {
-    font-size: 23px;
-    height: 45px;
-    width: 48px;
-    border-radius: 30px;
+  font-size: 23px;
+  height: 45px;
+  width: 48px;
+  border-radius: 30px;
 }
 
 .user-popup {
-    color: transparent;
-    background-color: transparent;
-    position: fixed;
-    font-family: "Arial";
-    border-radius: 20px;
-    padding: 8px;
-    transition: 0.2s;
-    font-size: 15px;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-weight: bold;
-    right: 8px;
+  color: transparent;
+  background-color: transparent;
+  position: fixed;
+  font-family: "Arial";
+  border-radius: 20px;
+  padding: 8px;
+  transition: 0.2s;
+  font-size: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-weight: bold;
+  right: 8px;
 }
 
 @media (max-width: 1018px) {
-    .profile-panel{
-      position: static;
-      margin-left: -40px;
-    }
+  .profile-panel {
+    position: static;
+    margin-left: -40px;
   }
+}
 
 .checkbox {
-    display: none;
+  display: none;
 }
 
 .checkbox-toggle {
-    max-width: 42px;
-    min-width: 42px;
-    height: 22px;
-    background-image: linear-gradient(to right, rgb(163, 53, 157), rgb(107, 64, 194));
-    border-radius: 50px;
-    cursor: pointer;
-    position: relative;
-    right: 50px;
+  max-width: 42px;
+  min-width: 42px;
+  height: 22px;
+  background-image: linear-gradient(
+    to right,
+    rgb(163, 53, 157),
+    rgb(107, 64, 194)
+  );
+  border-radius: 50px;
+  cursor: pointer;
+  position: relative;
+  right: 50px;
 }
 
 .checkbox-toggle::before {
-    position: absolute;
-    background-color: rgb(255, 251, 234);
-    width: 16px;
-    height: 16px;
-    border-radius: 50px;
-    margin-left: 3px;
-    margin-top: 3px;
-    transition: 0.2s;
+  position: absolute;
+  background-color: rgb(255, 251, 234);
+  width: 16px;
+  height: 16px;
+  border-radius: 50px;
+  margin-left: 3px;
+  margin-top: 3px;
+  transition: 0.2s;
 
-    content: "D";
-    font-family: sans-serif;
-    font-size: 13px;
-    font-weight: bolder;
-    text-align: center;
-
+  content: "D";
+  font-family: sans-serif;
+  font-size: 13px;
+  font-weight: bolder;
+  text-align: center;
 }
 
 .checkbox:checked + .checkbox-toggle::before {
-    transform: translate(20px);
-    content: "C";
+  transform: translate(20px);
+  content: "C";
+}
+
+.tooltip {
+  visibility: hidden;
+  color: rgb(194, 194, 194);
+  background-color: rgb(39, 39, 39);
+  position: fixed;
+  font-family: "Arial";
+  border-radius: 3px;
+  padding: 4px;
+  font-size: 11px;
+  outline: 1px solid rgb(194, 194, 194);
 }
