--- a/DTC.web/src/pages/Pages.css
+++ b/DTC.web/src/pages/Pages.css
@@ -109,7 +109,8 @@ button:active {
   border-radius: 20px;
   padding: 8px;
   transition: 0.2s;
-  font-size: 15px;
+  font-size: 14.5px;
+  letter-spacing: .5px;
   padding-left: 10px;
   padding-right: 10px;
   font-weight: bold;
