--- a/DTC.web/src/App.css
+++ b/DTC.web/src/App.css
@@ -10,3 +10,14 @@
 ::-webkit-scrollbar-track {
   background-color: rgb(13, 0, 37); /* Change track color */
 }
+
+body {
+  background-color: rgb(255, 251, 234);
+  margin: 0;
+  padding: 0;
+}
+
+text {
+  color: rgb(245, 245, 245);
+}
+
