--- a/DTC.web/src/assets/CardModal/CardModal.css
+++ b/DTC.web/src/assets/CardModal/CardModal.css
@@ -45,6 +45,11 @@
   margin-left: 5px;
 }
 
+.modal-card:hover {
+  outline: none;
+  cursor: auto;
+}
+
 .modal-stats {
   display: flex;
   flex-direction: column;
