Implement DeckPane and CardPane

--- a/DTC.web/src/pages/CardSearch/CardSearch.css
+++ b/DTC.web/src/pages/CardSearch/CardSearch.css
@@ -9,6 +9,7 @@
   background-color: rgb(27, 0, 78);
   padding: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
 .user-popup {
@@ -25,29 +26,4 @@
 /* Add this for the hover effect */
 .card-image:hover {
   outline: 3px solid rgb(116, 53, 243); /* Example outline color and width */
-}
-
-#image-list {
-  margin-top: 10px; /* Adjusted margin based on the height of #search-panel */
-  width: 1175px;
-  margin-left: auto; /* Center the grid horizontally */
-  margin-right: auto;
-  padding: 10px;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 10px;
-}
-
-@media (max-width: 1200px) {
-  #image-list {
-    width: 940px;
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
-
-@media (max-width: 965px) {
-  #image-list {
-    width: 705px;
-    grid-template-columns: repeat(3, 1fr);
-  }
 }
