--- a/DTC.web/src/pages/DeckSearch/DeckSearch.css
+++ b/DTC.web/src/pages/DeckSearch/DeckSearch.css
@@ -1,12 +1,13 @@
 #header-ds {
-    font-family: "Arial";
-    width: 100%;
-    height: 100px;
-    display: flex;
-    position: fixed;
-    flex-direction: row;
-    align-items: center;
-    background-color: rgb(27, 0, 78);
-    padding: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  font-family: "Arial";
+  width: 100%;
+  position: fixed;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: rgb(27, 0, 78);
+  padding: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
