--- a/DTC.web/src/pages/CreateDeck/CreateDeck.css
+++ b/DTC.web/src/pages/CreateDeck/CreateDeck.css
@@ -10,3 +10,9 @@
     padding: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
+
+@media (max-width: 650px) {
+    #header-cd {
+      flex-direction: column;
+    }
+  }
