--- a/DTC.web/src/assets/CardModal/CardModal.css
+++ b/DTC.web/src/assets/CardModal/CardModal.css
@@ -1,3 +1,28 @@
+.card-modal-content {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  right: 40px;
+  bottom: 40px;
+  width: 750px;
+  height: 500px;
+  padding: 20px;
+  margin: auto;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  background-color: rgb(255, 251, 234);
+}
+
+.card-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+}
+
 .modal-header {
   font-family: "Arial";
   position: fixed;
@@ -64,4 +89,42 @@
   font-family: "Serif";
   font-size: 17px;
   color: black;
+}
+
+@media (max-width: 1200px) {
+  .card-modal-content {
+    width: 375px;
+    height: 250px;
+  }
+  .modal-header {
+    width: 415px;
+  }
+  .modal-heading {
+    font-size: 9px;
+  }
+  .modal-card {
+    width: 145px;
+    height: 170px;
+  }
+  .modal-stats text {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 650px) {
+  .card-modal-content {
+    height: 200px;
+  }
+  .modal-header {
+    height: 50px;
+  }
+  .modal-heading {
+    padding: 5px;
+  }
+  .modal-card {
+    display: none;
+  }
+  .modal-stats {
+    margin-top: 40px;
+  }
 }
