--- a/DTC.web/src/assets/DeckPane/DeckPane.css
+++ b/DTC.web/src/assets/DeckPane/DeckPane.css
@@ -15,3 +15,10 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+@media (max-width: 900px) {
+  .deck-pane {
+    width: 420px;
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
