--- a/DTC.web/src/pages/Profile/Profile.css
+++ b/DTC.web/src/pages/Profile/Profile.css
@@ -11,6 +11,12 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
+@media (max-width: 650px) {
+    #header-pf {
+      flex-direction: column;
+    }
+  }
+
 .oauth {
     margin-top: 130px;
     margin-left: 10px;
