--- a/DTC.web/src/pages/CreateDeck/CreateDeck.css
+++ b/DTC.web/src/pages/CreateDeck/CreateDeck.css
@@ -9,6 +9,7 @@
     background-color: rgb(27, 0, 78);
     padding: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    transition: 0.5s;
 }
 
 @media (max-width: 650px) {
