--- a/DTC.web/src/assets/DTCHeader/DTCHeader.css
+++ b/DTC.web/src/assets/DTCHeader/DTCHeader.css
@@ -126,45 +126,8 @@ button:active {
   border-radius: 30px;
 }
 
-@media (max-width: 650px) {
-  .heading {
-    background-color: rgb(27, 0, 78);
-  }
-  .heading:hover {
-    background-color: rgb(78, 48, 139);
-  }
-  .heading-txt {
-    display: none;
-    transition: 0.5s;
-    font-size: 0px;
-  }
-  .heading-logo {
-    visibility: "visible";
-    transition: 0.5s;
-    font-size: 15px;
-  }
-  .profile-button, .create-deck-button {
-    font-size: 12px;
-  }
-  button { 
-    width: 20px;
-    height: 17.5px;
-    font-size: 9px;
-  }
-  .search-panel {
-    margin-right: -40px;
-  }
-  input {
-    width: 100px;
-    font-size: 9px;
-  }
-}
-
-@media (max-width: 400px) {
-  .profile-panel {
-    position: static;
-    margin-left: -50px;
-  }
+.heading-logo {
+  visibility: hidden;
 }
 
 .user-popup {
@@ -181,6 +144,52 @@ button:active {
   padding-right: 10px;
   font-weight: bold;
   right: 8px;
+}
+
+@media (max-width: 650px) {
+  .heading {
+    background-color: rgb(27, 0, 78);
+    border-radius: 30px;
+    padding: 13px;
+  }
+  .heading:hover {
+    background-color: rgb(78, 48, 139);
+  }
+  .heading-txt {
+    display: none;
+    transition: 0.5s;
+    font-size: 0px;
+  }
+  .heading-logo {
+    visibility: visible;
+    font-size: 15px;
+  }
+  .profile-button,
+  .create-deck-button {
+    border-radius: 25px;
+    font-size: 15px;
+    width: 42px;
+    height: 38px;
+  }
+  .search-panel {
+    margin-right: -40px;
+  }
+  input {
+    transition: 0.5s;
+    width: 100px;
+    font-size: 11px;
+  }
+
+  .user-popup {
+    font-size: 11px;
+  }
+}
+
+@media (max-width: 400px) {
+  .profile-panel {
+    position: static;
+    margin-left: -50px;
+  }
 }
 
 .checkbox {
