--- a/DTC.web/src/pages/DeckSearch/DeckSearch.css
+++ b/DTC.web/src/pages/DeckSearch/DeckSearch.css
@@ -10,6 +10,7 @@
   padding: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   z-index: 1;
+  transition: 0.5s;
 }
 
 @media (max-width: 650px) {
