--- a/DTC.web/src/pages/Dashboard/Dashboard.css
+++ b/DTC.web/src/pages/Dashboard/Dashboard.css
@@ -18,17 +18,10 @@
     }
   }
 
-#welcome-db {
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 95vh;
-    background-clip: text;
-    color: transparent;
-    background-image: linear-gradient(to left, rgb(90, 53, 163), rgb(225, 101, 250));
-    font-family: "Arial";
-    font-weight: bold;
-    font-size: 75px;
-    text-wrap: nowrap;
+.landing-decks {
+  display: grid;
+  gap: 20px;
+  position: fixed;
+  top: 150px;
+  right: 40px;
 }
