--- a/DTC.web/src/pages/DeckView/DeckView.css
+++ b/DTC.web/src/pages/DeckView/DeckView.css
@@ -11,10 +11,109 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   z-index: 1;
   transition: 0.5s;
+  margin-top: -120px;
 }
 
 @media (max-width: 650px) {
   #header-dv {
     height: 50px;
   }
+}
+
+.deck-view {
+  padding: 30px;
+  margin-top: 120px;
+  width: 1000px;
+  margin-left: auto; /* Center the grid horizontally */
+  margin-right: auto;
+  align-content: center;
+  z-index: 2;
+}
+
+.deck-view-panel {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 40px;
+}
+
+.deck-view-panel text {
+  font-family: Arial;
+}
+
+.deck-view-info {
+  padding-left: 15px;
+  padding-top: 8px;
+}
+
+.deck-view-name {
+  font-weight: bold;
+  font-size: 40px;
+  background-clip: text;
+  color: transparent;
+  background-image: linear-gradient(
+    to left,
+    rgb(129, 29, 29),
+    rgb(255, 106, 61)
+  );
+  -webkit-background-clip: text; /* For WebKit browsers */
+}
+
+.deck-view-format {
+  padding-top: 2px;
+  padding-left: 3px;
+}
+
+.deck-view-format text {
+  font-size: 20px;
+  font-style: italic;
+  color: rgb(90, 90, 90);
+}
+
+.deck-view-editors {
+  padding-top: 20px;
+  padding-left: 3px;
+}
+
+.deck-view-editors text {
+  margin-right: 5px;
+}
+
+.deck-view-author {
+  color: black;
+  font-weight: bold;
+  margin-left: 5px;
+}
+
+.deck-view-author-icon {
+  font-size: 15px;
+}
+
+.deck-view-others {
+  color: gray;
+  margin-left: 5px;
+}
+
+.deck-view-cover {
+  height: 250px;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.deck-view-tabs {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding-bottom: 30px;
+}
+
+.deck-view-tablinks {
+  height: 40px;
+  outline: 2px solid rgb(158, 55, 55);
+  outline-offset: -2px;
+  color: black;
+  width: auto;
+  border-radius: 8px;
+}
+
+.button-effect-hover:hover {
+  background-color: rgba(243, 189, 189, 0.6) !important;
 }
