--- a/DTC.web/src/pages/DeckView/DeckView.css
+++ b/DTC.web/src/pages/DeckView/DeckView.css
@@ -23,21 +23,21 @@
 .deck-view {
   padding: 30px;
   margin-top: 120px;
-  width: 1000px;
+  width: 60%;
   margin-left: auto; /* Center the grid horizontally */
   margin-right: auto;
   align-content: center;
   z-index: 2;
 }
 
+.deck-view text {
+  font-family: Arial;
+}
+
 .deck-view-panel {
   display: flex;
   flex-direction: row;
-  margin-bottom: 40px;
-}
-
-.deck-view-panel text {
-  font-family: Arial;
+  margin-bottom: 32px;
 }
 
 .deck-view-info {
@@ -69,9 +69,18 @@
   color: rgb(90, 90, 90);
 }
 
+.deck-view-desc {
+  padding-top: 25px;
+  padding-left: 5px;
+}
+
+.deck-view-desc text {
+  color: rgb(66, 66, 66);
+}
+
 .deck-view-editors {
-  padding-top: 20px;
-  padding-left: 3px;
+  padding-left: 8px;
+  padding-bottom: 12px;
 }
 
 .deck-view-editors text {
