--- a/DTC.web/src/pages/DeckView/DeckView.css
+++ b/DTC.web/src/pages/DeckView/DeckView.css
@@ -14,12 +14,6 @@
   margin-top: -120px;
 }
 
-@media (max-width: 650px) {
-  #header-dv {
-    height: 50px;
-  }
-}
-
 .deck-view {
   padding: 30px;
   margin-top: 120px;
@@ -28,6 +22,17 @@
   margin-right: auto;
   align-content: center;
   z-index: 2;
+}
+
+@media (max-width: 650px) {
+  #header-dv {
+    height: 50px;
+  }
+
+  .deck-view {
+    padding-top: 0px;
+    width: 70%;
+  }
 }
 
 .deck-view text {
@@ -120,7 +125,7 @@
   outline-offset: -2px;
   color: black;
   width: auto;
-  border-radius: 8px;
+  border-radius: 6px;
 }
 
 .button-effect-hover:hover {
