--- a/DTC.web/src/pages/Deck/Deck.css
+++ b/DTC.web/src/pages/Deck/Deck.css
@@ -42,19 +42,31 @@
 .deck-view-name {
   font-weight: bold;
   font-size: 40px;
-  background-clip: text;
-  color: transparent;
-  background-image: linear-gradient(
-    to left,
-    rgb(129, 29, 29),
-    rgb(255, 106, 61)
-  );
-  -webkit-background-clip: text; /* For WebKit browsers */
+  color: rgb(216, 75, 33);
+}
+
+.edit-button {
+  border-radius: 5px;
+  background-color: black;
+  width: 55px;
+  height: 28px;
+  margin-top: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+  margin-right: none;
+}
+
+.edit-button:hover {
+  background-color: #4d4d4d;
+}
+
+.edit-button:active {
+  background-color: #646464;
 }
 
 .deck-view-format {
   padding-top: 2px;
   padding-left: 3px;
+  width: fit-content;
 }
 
 .deck-view-format text {
@@ -64,7 +76,7 @@
 }
 
 .deck-view-desc {
-  padding-top: 25px;
+  margin-top: 25px;
   padding-left: 5px;
 }
 
@@ -176,5 +188,11 @@
 
   .deck-view-editors text {
     font-size: 14px;
+  }
+
+  .edit-button {
+    font-size: 14px;
+    width: 45px;
+    height: 25px;
   }
 }
