--- a/DTC.web/src/pages/Deck/Deck.css
+++ b/DTC.web/src/pages/Deck/Deck.css
@@ -130,7 +130,7 @@
 .deck-view-tabs {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  padding-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .deck-view-tablinks {
@@ -142,8 +142,31 @@
   border-radius: 6px;
 }
 
+.deck-view-add-card {
+  height: 40px;
+  background-color: rgb(158, 55, 55);
+  border-radius: 6px;
+  margin-top: -12px;
+  margin-bottom: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.35);
+  width: 99.1%;
+  display: none;
+}
+
+.deck-view-add-card:hover {
+  background-color: rgb(173, 75, 75);
+}
+
+.deck-view-add-card:active {
+  background-color: rgb(180, 95, 95);
+}
+
 .button-effect-hover:hover {
   background-color: rgba(243, 189, 189, 0.6) !important;
+}
+
+.deck-view-board {
+  margin-top: 30px;
 }
 
 @media (max-width: 650px) {
@@ -184,6 +207,11 @@
 
   .deck-view-tablinks {
     font-size: 14px;
+  }
+
+  .deck-view-add-card {
+    font-size: 14px;
+    width: 98%;
   }
 
   .deck-view-editors text {
