--- a/DTC.web/src/pages/Deck/Deck.css
+++ b/DTC.web/src/pages/Deck/Deck.css
@@ -31,7 +31,7 @@
 .deck-view-panel {
   display: flex;
   flex-direction: row;
-  margin-bottom: 32px;
+  margin-bottom: 18px;
 }
 
 .deck-view-info {
@@ -49,14 +49,20 @@
 }
 
 .edit-button {
+  font-size: 20px;
   border-radius: 5px;
   background-color: black;
-  width: 55px;
-  height: 28px;
-  margin-top: 15px;
+  width: 35px;
+  height: 35px;
+  max-width: 35px;
+  max-height: 35px;
+  min-width: 35px;
+  min-height: 35px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   margin-left: 15px;
-  margin-top: 10px;
+  margin-top: 5px;
+  padding-right: 0px;
+  padding-left: 2px;
 }
 
 .edit-button:hover {
@@ -81,35 +87,45 @@
 
 .deck-view-desc {
   margin-top: 25px;
-  padding-left: 5px;
+  margin-left: 5px;
 }
 
 .deck-view-desc text {
   color: rgb(66, 66, 66);
 }
 
-.deck-view-editors {
-  padding-left: 8px;
-  padding-bottom: 12px;
+.deck-view-stats {
+  margin-left: 8px;
+  margin-bottom: 32px;
 }
 
-.deck-view-editors text {
+.deck-view-stats text {
   margin-right: 5px;
-}
-
-.deck-view-author {
   color: black;
-  font-weight: bold;
-  margin-left: 5px;
 }
 
-.deck-view-author-icon {
-  font-size: 15px;
+.deck-view-text {
+  font-weight: bold;
+}
+
+.deck-view-text-left {
+  margin-left: 30px !important;
+}
+
+.deck-view-text-reg {
+  font-weight: normal;
+  text-wrap: nowrap;
+  margin-left: 8px;
 }
 
 .deck-view-others {
-  color: gray;
-  margin-left: 5px;
+  color: gray !important;
+  margin-left: 3px;
+}
+
+.deck-view-icon {
+  margin-right: 5px;
+  font-size: 14px;
 }
 
 .deck-view-cover {
@@ -209,6 +225,11 @@
     object-position: -2.5cap -3cap;
   }
 
+  .deck-view-text,
+  .deck-view-others {
+    font-size: 14px;
+  }
+
   .deck-view-tablinks {
     font-size: 14px;
   }
@@ -223,8 +244,13 @@
   }
 
   .edit-button {
-    font-size: 14px;
-    width: 45px;
-    height: 25px;
+    margin-top: 1px;
+    font-size: 16px;
+    width: 30px;
+    height: 28px;
+    max-width: 30px;
+    max-height: 28px;
+    min-width: 30px;
+    min-height: 28px;
   }
 }
